### 1.0.0 * change hook "chelonian_after_theme_setup" to "chelonian_after_setup_theme" * Update to HC 2.0.2 * Update to Tamatebako 1.2.2 * Add grunt files * update language file. * Fix margin-padding on mobile.

--- a/media-queries.css
+++ b/media-queries.css
@@ -78,8 +78,8 @@
 		padding: 0.5rem 1rem;
 	}
 	.entry-title a{
-		padding: 10px;
-		padding: 1rem;
+		padding: 20px 10px;
+		padding: 2rem 1rem;
 	}
 	.entry-summary,
 	.entry-content{
@@ -88,6 +88,8 @@
 	}
 	a.comments-link, span.comments-link a{
 		width: 100%;
+		padding: 5px 10px;
+		padding: 0.5rem 1rem;
 	}
 	.entry-footer{
 		padding: 10px;
